--- a/trendSummary.html
+++ b/trendSummary.html
@@ -22,6 +22,8 @@
 <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<link rel="stylesheet" href="css/common_page.css">
+
 <script type='module' src="./js/trends.js"></script>
 <script type='module' src="./js/VTshape.js"></script>
 <script type='module' src="./js/VTleaflet.js"></script>
@@ -65,6 +67,12 @@ pointer-events: none;
     </div>
 </div>
 
-<a href="landing_page.html">Dashboard home</a>
+<hr>
+<p>
+  <a href="/" class="landing-item-link">Back to home</a>
+  <a href="https://vtecostudies.org">
+    <img src="http://vtatlasoflife.org/FBMP_dashboard/etc/VCE_logo_vertical_RGB_transparent.png" class="landing-item-logo">
+  </a>
+</p>
 
 </html>
