--- a/alt_landing_page.html
+++ b/alt_landing_page.html
@@ -108,7 +108,7 @@
     
   <hr>
   <p>
-      <a href="/">Back to home</a>
+      <a href="/FBMP_dashboard">Back to home</a>
       <a href="https://vtecostudies.org">
         <img src="http://vtatlasoflife.org/FBMP_dashboard/etc/VCE_logo_vertical_RGB_transparent.png" class="landing-item-logo">
       </a>
