--- a/siteSummary.html
+++ b/siteSummary.html
@@ -89,7 +89,7 @@ pointer-events: none;
   </div>
   <hr>
   <p>
-    <a href="../" class="landing-item-link">Back to home</a>
+    <a href="/FBMP_dashboard" class="landing-item-link">Back to home</a>
     <a href="https://vtecostudies.org">
       <img src="http://vtatlasoflife.org/FBMP_dashboard/etc/VCE_logo_vertical_RGB_transparent.png" class="landing-item-logo">
     </a>
