--- a/sppSummary.html
+++ b/sppSummary.html
@@ -98,7 +98,7 @@ pointer-events: none;
 
 <hr>
 <p>
-    <a href="../" class="landing-item-link">Back to home</a>
+    <a href="/FBMP_dashboard" class="landing-item-link">Back to home</a>
     <a href="https://vtecostudies.org">
       <img src="http://vtatlasoflife.org/FBMP_dashboard/etc/VCE_logo_vertical_RGB_transparent.png" class="landing-item-logo">
     </a>
