--- a/alt_landing_page.html
+++ b/alt_landing_page.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Forest Bird Monitoring Dashboard</title>
-    <link rel="icon" type = "jgp" href="http://vtatlasoflife.org/FBMP_dashboard/etc/VCE bird sun only.jpg" />
+    <link rel="icon" type = "jgp" href="/etc/VCE bird sun only.jpg" />
     <meta charset="utf-8"/> <!-- resolve 'character encoding' error -->
     <!-- don't allow the browser to cache results -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
@@ -108,9 +108,9 @@
     
   <hr>
   <p>
-      <a href="/FBMP_dashboard">Back to home</a>
+      <a href="/FBMP_dashboard" id="home_route">Back to home</a>
       <a href="https://vtecostudies.org">
-        <img src="http://vtatlasoflife.org/FBMP_dashboard/etc/VCE_logo_vertical_RGB_transparent.png" class="landing-item-logo">
+        <img src="/etc/VCE_logo_vertical_RGB_transparent.png" class="landing-item-logo">
       </a>
   </p>
 
