--- a/sppSummary.html
+++ b/sppSummary.html
@@ -98,9 +98,9 @@ pointer-events: none;
 
 <hr>
 <p>
-    <a href="/FBMP_dashboard" class="landing-item-link">Back to home</a>
+    <a href="/FBMP_dashboard" id="home_route" class="landing-item-link">Back to home</a>
     <a href="https://vtecostudies.org">
-      <img src="http://vtatlasoflife.org/FBMP_dashboard/etc/VCE_logo_vertical_RGB_transparent.png" class="landing-item-logo">
+      <img src="/etc/VCE_logo_vertical_RGB_transparent.png" class="landing-item-logo">
     </a>
 </p>
 
