--- a/landing_page.html
+++ b/landing_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Forest Bird Monitoring Dashboard</title>
-  <link rel="icon" type = "jgp" href="http://vtatlasoflife.org/FBMP_dashboard/etc/VCE bird sun only.jpg" />
+  <link rel="icon" type = "jgp" href="/etc/VCE bird sun only.jpg" />
   <head>
   <meta charset="utf-8"/> <!-- resolve 'character encoding' error -->
   <!-- don't allow the browser to cache results -->
@@ -51,7 +51,7 @@
                   height: 100%; overflow: hidden;" id="surveySites"></div>
   </div>
   <div style="position: absolute; top: 55%; left: 86%; z-index: 999">
-    <img src="http://vtatlasoflife.org/FBMP_dashboard/etc/VCE_logo_vertical_RGB_transparent.png" style="width: 150px">
+    <img src="/etc/VCE_logo_vertical_RGB_transparent.png" style="width: 150px">
   </div>
   <div style = "position: absolute; top: 55%; left: 42%; width:25%">
     <br>
@@ -89,5 +89,5 @@
   
   </div>
 </body>
-    <a href="landing_page.html">Back to home</a>
+    <a href="landing_page.html" id="home_route">Back to home</a>
     </html>
